--- a/le_coin_libre/store/static/styles.css
+++ b/le_coin_libre/store/static/styles.css
@@ -28,6 +28,11 @@ footer{
     font-family: 'Vina Sans', sans-serif;
     color : white;
     text-align: center;
+    bottom: 0;
+    width: 100%;
+    flex: 1;
+    padding: 15px;
+    margin-bottom: 0;
 }
 
 nav {
