--- a/le_coin_libre/store/templates/store/index.html
+++ b/le_coin_libre/store/templates/store/index.html
@@ -4,7 +4,7 @@
 
         <!-- construction d'une barre de recherche -->
 
-        <form class="Recherche_form" id="search">
+        <form class="Recherche_form" id="search" action="{%url 'search' %}">
             <input type="text" id="search" name="search" placeholder="Entrez votre recherche">
             <select id="categorie" name="Catégorie">
                 <option value="0"> Catégorie </option>
@@ -12,7 +12,8 @@
                 <option value="{{ categorie.id }}"> {{ categorie.name }} </option>
                 {% endfor %}
             </select>
-            <input class="rechercher" type="submit" value="Rechercher" href="recherche.html">
+            <input class="rechercher" type="submit" value="Rechercher">
+        
         </form>
 
         <!-- construction d'un bloc produit à itérer --> 
@@ -20,7 +21,7 @@
         {% for produit in liste_produit %}
         <div class="bloc_produit">
             <div class="photo_produit">
-                <img src= '{{produit.image}}'>
+                <img src= {{produit.image}}>
             </div>
             <div class="description_produit">
 
