Modification du fichier produits.html

--- a/le_coin_libre/store/templates/store/produit.html
+++ b/le_coin_libre/store/templates/store/produit.html
@@ -3,17 +3,22 @@
     
 {%include 'store/footer.html'%}
 
+<script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const productId = urlParams.get('product');
+</script>
+
 <div class="bloc_produit">
     <div class="photo_produit">
-        {% for img in produit.image%}
+        {% for img in liste_produit[productId].image%}
         <img src= '{img}'>
         {%endfor%}
     </div>
     <div class="description_produit">
-        <h1> {{ produit.title }} </h1>
-        <h2 class="utilisateur">{{produit.user}}</h2>
-        <h3 class="prix"> {{ produit.price }} € </h3>
-        <p class="description"> {{ produit.description }} </p>
-        <p class="date">{{produit.date}}</p>
+        <h1> {{ liste_produit[productId].title }} </h1>
+        <h2 class="utilisateur">{{liste_produit[productId].user}}</h2>
+        <h3 class="prix"> {{ liste_produit[productId].price }} € </h3>
+        <p class="description"> {{ liste_produit[productId].description }} </p>
+        <p class="date">{{liste_produit[productId].date}}</p>
     </div>
 </div>
