réparation fonctionnalité de connexion

--- a/le_coin_libre/store/templates/store/authentification.html
+++ b/le_coin_libre/store/templates/store/authentification.html
@@ -3,7 +3,6 @@
 {%include 'store/header.html'%}
 
 <h1>Page d'authentification</h1>
-{% block content %}
 {% if messages %}
     <ul class="messages">
         {% for message in messages %}
@@ -12,18 +11,19 @@
     </ul>
 {% endif %}
 
-{% if in_auth_view %}
-    <form class='auth' method="post" action="{% url 'auth' %}"> 
-        <div class="formulaire_auth">
-            
-            <!-- csrf_token est une protection contre les attaques CSRF (Cross-Site Request Forgery) -->
-            {% csrf_token %} 
-            <!--as_p permet de générer un formulaire HTML avec une balise <p> pour chaque champ-->
-            {{ form.as_p }}
-           
-            <button type="submit">S'inscrire</button>
-        </div>
-    </form>
+{%if in_auth_view%}
+<form class='auth' method="post"action="{% url 'auth' %}"> 
+    <div class="formulaire_auth">
+        
+        <!-- csrf_token est une protection contre les attaques Cross-Site Request Forgery -->
+        {% csrf_token %}
+        <!--as_p permet de générer un formulaire HTML avec une balise <p> pour chaque champ-->
+        {{ form.as_p }}
+        
+        <button type="submit">S'inscrire</button>
+    </div>
+</form>
+   
 
 
 {% elif request.user.is_authenticated %}
@@ -41,11 +41,10 @@
         <button type="submit">Se connecter</button>
     </div>
 </form>
+<a href="{% url 'auth' %}">Pas encore inscrit ? cliquez ici </a>
 
-<a href="{% url 'auth' %}">Pas encore inscrit ?</a>
+
 {%endif%}
 
 
-
-{% endblock %}
 {%include 'store/footer.html'%}
