--- a/le_coin_libre/store/templates/store/index.html
+++ b/le_coin_libre/store/templates/store/index.html
@@ -25,8 +25,8 @@
             </div>
             <div class="description_produit">
 
-                <h1> {{ produit.title }} </h1>
-                <h2 class="prix"> {{ produit.price }} € </h2>
+                <h1> {{ produit.nom }} </h1>
+                <h2 class="prix"> {{ produit.prix }} € </h2>
 
                 <p class="description"> {{ produit.description }} </p>
             </div>
