--- a/le_coin_libre/store/templates/store/recherche.html
+++ b/le_coin_libre/store/templates/store/recherche.html
@@ -26,7 +26,7 @@
             <div class="description_produit">
 
                 <h1> {{ produit.title }} </h1>
-                <h2 class="prix"> {{ produit.price }} € </h2>
+                <h2 class="prix"> {{ produit.prix }} € </h2>
 
                 <p class="description"> {{ produit.description }} </p>
             </div>
