--- a/le_coin_libre/store/templates/store/index.html
+++ b/le_coin_libre/store/templates/store/index.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 {%include 'store/header.html' %}
 
@@ -18,19 +17,20 @@
 
         <!-- construction d'un bloc produit à itérer --> 
 
-         <!-- construction d'un bloc produit à itérer --> 
+        {% for produit in liste_produit %}
+        <div class="bloc_produit">
+            <div class="photo_produit">
+                <img src= '{{produit.image}}'>
+            </div>
+            <div class="description_produit">
 
-         {% for produit in liste_produit %}
-         <div class="bloc_produit">
-             <div class="photo_produit">
-                 <img src="{{ produit.image }}" style="width: 300px;">
-             </div>
-             <div class="description_produit">
-                 <h1>{{ produit.nom }}</h1>
-                 <h2 class="prix">{{ produit.prix }} €</h2>
-                 <p class="description">{{ produit.description }}</p>
-             </div>
-         </div>
-     {% endfor %}
+                <h1> {{ produit.nom }} </h1>
+                <h2 class="prix"> {{ produit.prix }} € </h2>
+
+                <p class="description"> {{ produit.description }} </p>
+            </div>
+        </div>
+        {% endfor %}
+
  
 {%include 'store/footer.html' %}
