--- a/le_coin_libre/store/templates/store/recherche.html
+++ b/le_coin_libre/store/templates/store/recherche.html
@@ -21,15 +21,17 @@
         {% for produit in liste_produit %}
         <div class="bloc_produit">
             <div class="photo_produit">
-                <img src="{{ produit.image }}" style="width: 300px;">
+                <img src= '../{{produit.image}}'>
             </div>
             <div class="description_produit">
-                <h1>{{ produit.nom }}</h1>
-                <h2 class="prix">{{ produit.prix }} €</h2>
-                <p class="description">{{ produit.description }}</p>
+
+                <h1> {{ produit.nom }} </h1>
+                <h2 class="prix"> {{ produit.prix }} € </h2>
+
+                <p class="description"> {{ produit.description }} </p>
             </div>
         </div>
-    {% endfor %}
+        {% endfor %}
 
 
    
