mama le site commence à etre vrmt bg

--- a/le_coin_libre/store/templates/store/header.html
+++ b/le_coin_libre/store/templates/store/header.html
@@ -8,6 +8,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Roboto&display=swap" rel="stylesheet">
+        <style>
+            /* Supprime le soulignement par défaut et change la couleur du texte du lien */
+            a {
+                text-decoration: none;
+                color: black; /* Vous pouvez définir la couleur que vous préférez */
+            }
+        </style>
 
     </head>
     <body>
