le commit avant la tempête

--- a/le_coin_libre/store/templates/store/user_profile.html
+++ b/le_coin_libre/store/templates/store/user_profile.html
@@ -2,7 +2,7 @@
 {%include 'store/header.html'%}
 
 {% block content %}
-  <h2>Bienvenue sur votre page utilisateur, {{ user_data.user.username }}!</h2>
+  <h2>Bienvenue sur votre page utilisateur, {{ user_data.user.email }}!</h2>
 
   <!-- Informations utilisateur -->
   <div>
