Les petits boutons bien kawai uWu

--- a/le_coin_libre/store/templates/store/header.html
+++ b/le_coin_libre/store/templates/store/header.html
@@ -14,6 +14,32 @@
                 text-decoration: none;
                 color: black; /* Vous pouvez définir la couleur que vous préférez */
             }
+            #changeButtonPlus {
+                background-color: #525452; /* Couleur de fond du bouton */
+                color: white; /* Couleur du texte du bouton */
+                border: none; /* Supprimer la bordure du bouton */
+                padding: 10px 20px; /* Espacement intérieur du bouton */
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                cursor: pointer;
+                border-radius: 4px; /* Bords arrondis */
+            }
+            #changeButtonMoins {
+                background-color: #525452; /* Couleur de fond du bouton */
+                color: white; /* Couleur du texte du bouton */
+                border: none; /* Supprimer la bordure du bouton */
+                padding: 10px 20px; /* Espacement intérieur du bouton */
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                cursor: pointer;
+                border-radius: 4px; /* Bords arrondis */
+            }
         </style>
 
     </head>
