modifications de Adrien

--- a/le_coin_libre/store/templates/store/header.html
+++ b/le_coin_libre/store/templates/store/header.html
@@ -57,8 +57,9 @@
                 </div> 
                 {%else%}
                 <div class="bouton_accueil">
-                    <a href = "../connect"> Connexion </a> 
+                    <a href = "../login"> Connexion </a> 
                 </div>  
+                
                 {%endif%}
                 
                 <div class="bouton_accueil">
