la fonctionnalité d'authentification fonctionne enfin

--- a/le_coin_libre/store/templates/store/header.html
+++ b/le_coin_libre/store/templates/store/header.html
@@ -57,9 +57,8 @@
                 </div> 
                 {%else%}
                 <div class="bouton_accueil">
-                    <a href = "../login"> Connexion </a> 
+                    <a href = "../connect"> Connexion </a> 
                 </div>  
-                
                 {%endif%}
                 
                 <div class="bouton_accueil">
