--- a/le_coin_libre/store/templates/store/register.html
+++ b/le_coin_libre/store/templates/store/register.html
@@ -7,14 +7,17 @@
   <h2>Register</h2>
   <form method="post" action="{% url 'auth' %}">
     {% csrf_token %}
+    <p>Nom d'utilisateur</p>
+    {{form.username}}
+    <br>
     <p>Email</p>
-    {{ form.username}}
+    {{form.email}}
     <br>
     <p>Mot de passe</p>
-    {{ form.password1}}
+    {{form.password1}}
     <br>
     <p>Entrez votre mot de passe à nouveau</p>
-    {{ form.password2}}
+    {{form.password2}}
     <button type="submit">Register</button>
   </form>
 {% endblock %}
