--- a/le_coin_libre/store/templates/store/user_profile.html
+++ b/le_coin_libre/store/templates/store/user_profile.html
@@ -2,21 +2,21 @@
 {%include 'store/header.html'%}
 
 {% block content %}
-<CENTER><h2>Bienvenue sur votre page utilisateur, {{ user_data.user.username }}!</h2></CENTER>
+<CENTER><h2>Bienvenue sur votre page utilisateur, {{user.user.username}} !</h2></CENTER>
 <div class="bloc_produit">
   <!-- Informations utilisateur -->
   <div>
     <h3>Informations utilisateur :</h3>
-    <p> Nom d'utilisateur : {{ user_data.user.username }}</p>
-    <p>Email : {{ user_data.user.email }}</p>
+    <p>Nom d'utilisateur : {{user.user.username }}</p>
+    <p>Email : {{user.user.email }}</p>
     <!-- Ajoutez d'autres informations utilisateur au besoin -->
   </div>
 </div>
   <!-- Produits de l'utilisateur -->
   <div>
     <CENTER><h3>Vos produits en vente </h3></CENTER>
-    {% if product_data %}
-        {% for product in product_data %}
+    {% if products %}
+        {% for product in products %}
           <li>
             <div class="bloc_produit">
               <div class="photo_produit">
@@ -24,14 +24,11 @@
               </div>
               <div class="description_produit">
                   <a href='/produit/{{product.id}}'>
-                      <h1>{{ product.title }}</h1>
-                      <form method="post" action="{% url 'supprimer_produit' product.id %}">
-                        {% csrf_token %}
-                        <button type="submit">Supprimer produit</button>
-                    </form>
+                      <h1>{{product.title}}</h1>
+                      <a href="{% url 'delete_product' product.id %}" onclick="return ConfirmDelete()"><button>Supprimer</button></a>                      
                   </a>
-                  <h2 class="prix">{{ product.price }} €</h2>
-                  <p class="description">{{ product.description }}</p>
+                  <h2 class="prix">{{product.price}} €</h2>
+                  <p class="description">{{product.description}}</p>
               </div>
           </div>
             <!-- Ajoutez d'autres détails du produit au besoin -->
@@ -41,6 +38,14 @@
       <p>Vous n'avez actuellement aucun produit en vente.</p>
     {% endif %}
   </div>
+  
+<script>
+  function ConfirmDelete() {
+      const confirmation = window.confirm("Êtes-vous sûr de vouloir supprimer ce produit ?");
+        
+      return confirmation; // Renvoie true si l'utilisateur clique sur "OK" et false sinon
+  }
+</script>
 
 {% endblock %}
 
