--- a/le_coin_libre/store/templates/store/header.html
+++ b/le_coin_libre/store/templates/store/header.html
@@ -4,43 +4,10 @@
     <head>
         
         <title> Le Coin Libre </title>
-        <link href="{% static 'styles.css' %}" rel="stylesheet" type="text/css" >
+        <link href="{% static 'styles.css' %}" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Roboto&display=swap" rel="stylesheet">
-        <style>
-            /* Supprime le soulignement par défaut et change la couleur du texte du lien */
-            a {
-                text-decoration: none;
-                color: black; /* Vous pouvez définir la couleur que vous préférez */
-            }
-            #changeButtonPlus {
-                background-color: #525452; /* Couleur de fond du bouton */
-                color: white; /* Couleur du texte du bouton */
-                border: none; /* Supprimer la bordure du bouton */
-                padding: 10px 20px; /* Espacement intérieur du bouton */
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                cursor: pointer;
-                border-radius: 4px; /* Bords arrondis */
-            }
-            #changeButtonMoins {
-                background-color: #525452; /* Couleur de fond du bouton */
-                color: white; /* Couleur du texte du bouton */
-                border: none; /* Supprimer la bordure du bouton */
-                padding: 10px 20px; /* Espacement intérieur du bouton */
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                cursor: pointer;
-                border-radius: 4px; /* Bords arrondis */
-            }
-        </style>
 
     </head>
     <body>
