--- a/le_coin_libre/store/templates/store/produit.html
+++ b/le_coin_libre/store/templates/store/produit.html
@@ -5,17 +5,18 @@
 
 <div class="bloc_produit">
     <div class="photo_produit">
-        <img id="image" src= '../static/images/{{liste_produit.id}}/image1.jpg' alt="Image" style="width: 400px; height: 300px;">
+        <img id="image" src= '../static/images/{{Product.id}}/image1.jpg' alt="Image" style="width: 400px; height: 300px;">
         <center>
             <button id="changeButtonMoins" onclick="changeImageMoins()">&larr;</button>
             <button id="changeButtonPlus" onclick="changeImagePlus()">&rarr;</button>
         </center>    
     </div>
     <div class="description_produit">
-        <h1> {{ liste_produit.nom }} </h1>
-        <h3 class="prix"> {{ liste_produit.prix }} € </h3>
-        <p class="description"> {{ liste_produit.description }} </p>
-        <p class="date">{{liste_produit.date}}</p>
+        <h1> {{ Product.nom }} </h1>
+        <h2 class="prix"> {{ Product.prix }} €</h2>
+        <a href= '/user_profile/?query={{Product.user}}'><h3 class="user">{{Product.user}}</h3></a>
+        <p class="description"> {{ Product.description }}</p>
+        <p class="date">{{Product.date}}</p>
     </div>
 </div>
 
