--- a/le_coin_libre/store/templates/store/recherche.html
+++ b/le_coin_libre/store/templates/store/recherche.html
@@ -17,22 +17,23 @@
 
 
         <!-- construction des résultats de la recherche-->
-
+    {% if liste_produit %}
         {% for produit in liste_produit %}
         <div class="bloc_produit">
             <div class="photo_produit">
-                <img src= '../{{produit.image}} 'style="width: 300px;">
+                <img src= '../static/images/{{produit.id}}/image1.jpg' style="width: 300px;">
             </div>
-            <div class="description_produit">
-
-                <h1> {{ produit.nom }} </h1>
+            <div class="détails_produit">
+                <a href='/produit/{{produit.id}}'><h1> {{ produit.nom }} </h1></a>
                 <h2 class="prix"> {{ produit.prix }} € </h2>
-
+                <a href= '/user_profile/?query={{produit.user}}'><h3 class="user">{{produit.user}}</h3></a>
                 <p class="description"> {{ produit.description }} </p>
+                <p class="date">{{produit.date}}</p>
             </div>
         </div>
         {% endfor %}
-
-
+    {% else %}
+        <p>Aucun résulat</p>
+    {% endif %}
    
- {%include 'store/footer.html'%}
+{%include 'store/footer.html'%}
