--- a/le_coin_libre/store/templates/store/login.html
+++ b/le_coin_libre/store/templates/store/login.html
@@ -1,9 +1,8 @@
-
 {%load static%}
 {%include 'store/header.html'%}
 
 {% block content %}
-  <h2>Login</h2>
+  <h1>Connexion</h1>
   <form method="post" action="{% url 'connect' %}">
     {% csrf_token %}
     <p>Nom d'utilisateur</p>
@@ -16,5 +15,5 @@
   </form>
 {% endblock %}
 
-<a href="{% url 'auth' %}">Register</a>
+<a href="{% url 'auth' %}"><button>S'enregistrer</button></a>
 {%include 'store/footer.html'%}
