--- a/le_coin_libre/store/templates/store/login.html
+++ b/le_coin_libre/store/templates/store/login.html
@@ -1,8 +1,9 @@
+
 {%load static%}
 {%include 'store/header.html'%}
 
 {% block content %}
-  <h1>Connexion</h1>
+  <h2>Login</h2>
   <form method="post" action="{% url 'connect' %}">
     {% csrf_token %}
     <p>Adresse Email</p>
@@ -15,5 +16,5 @@
   </form>
 {% endblock %}
 
-<a href="{% url 'auth' %}"><button>S'enregistrer</button></a>
+<a href="{% url 'auth' %}">Register</a>
 {%include 'store/footer.html'%}
