--- a/le_coin_libre/store/templates/store/produit.html
+++ b/le_coin_libre/store/templates/store/produit.html
@@ -22,7 +22,7 @@
 
 <script>
     let currentIndex = 1; // Indice initial de l'image
-    const totalImages = {{liste_produit.nb_image}}; // Nombre total d'images
+    const totalImages = {{Product.nb_image}}; // Nombre total d'images
 
     function changeImagePlus() {
         currentIndex+=1;
@@ -31,7 +31,7 @@
         }
         
         const imageElement = document.getElementById('image');
-        imageElement.src = `../static/images/{{liste_produit.id}}/image${currentIndex}.jpg`; // Remplace image1.jpg, image2.jpg, etc.
+        imageElement.src = `../static/images/{{Product.id}}/image${currentIndex}.jpg`; // Remplace image1.jpg, image2.jpg, etc.
     }
 
     function changeImageMoins() {
@@ -41,7 +41,7 @@
         }
         
         const imageElement = document.getElementById('image');
-        imageElement.src = `../static/images/{{liste_produit.id}}/image${currentIndex}.jpg`; // Remplace image1.jpg, image2.jpg, etc.
+        imageElement.src = `../static/images/{{Product.id}}/image${currentIndex}.jpg`; // Remplace image1.jpg, image2.jpg, etc.
     }
 </script>
 
